# CourseWork1

./: README.md  pyproject.toml
src/: data.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py
